--- a/static/style.css
+++ b/static/style.css
@@ -27,9 +27,11 @@ input {
 
 #answerbox img {
     width: 35%;
+    height: 35%;
 }
 img #robotimg {
     width: 400px;
+    max-height: 100%;
 }
 #willbotsays {
     max-width: 400px;
